--- a/cv-vitae/schneeman-brent-resume.Rmd
+++ b/cv-vitae/schneeman-brent-resume.Rmd
@@ -41,6 +41,7 @@ my_experience <- tibble::tribble(
   "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Assume roles of engineering leader, scrummaster, product owner, and team member as appropriate; skilled at blending Machine Learning and Software Engineering process techniques to deliver ML-based solutions",
   "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Implemented and directed Alegion's intellectual property program by liaising between outside Counsel, internal inventors, and executive sponsors",
   "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Active in local meetups, spoke at Data Day Texas in January 2020",
+  "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Report to Vice President, Engineering; dotted line to CTO",
 
   # The DOSH Experience
   
@@ -50,6 +51,7 @@ my_experience <- tibble::tribble(
   "Senior Director, Data Science", "Jan 2018", "Feb 2019", "DOSH, LLC", "Built xgboost-based models predicting offer redemption (transactions) and deeply analyzed fraudulent behaviors and referral networks using R and various network analytics packages",
   "Senior Director, Data Science", "Jan 2018", "Feb 2019", "DOSH, LLC", "Lead transformation of company dashboards from 'vanity-metrics' to business-focused KPIs",
   "Senior Director, Data Science", "Jan 2018", "Feb 2019", "DOSH, LLC", "Directed Data Science efforts in predicting causal impact of multi-vendor markets and price elasticity",
+  "Senior Director, Data Science", "Jan 2018", "Feb 2019", "DOSH, LLC", "Reported to Sr Vice President, Engineering",
   
   # The HomeAway Experience
   
@@ -65,6 +67,7 @@ my_experience <- tibble::tribble(
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created and lead 100+ volunteer \"science club\", all trying to swipe right for science",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Partnered with the UT McCombs School of Business, providing guidance and data for the Business Analytics program participant capstone projects. Acted as an external ambassador through public speaking at various events. Built internal credibility around a scientific method to AB Testing and algorithmic approached to business problems",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Collaborated with Data and Software Engineering organizations to prototype and select big-data solutions based on Hadoop (HDFS, Hive) and Spark",
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Reported to CIO",  
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Directed 25-person team responsible for the Orders and Payments Platform services. The team consisted of Engineers and Architects of all levels and areas in \"the stack\" (UX/UI, web-tier, service layer, ...)",
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Worked closely with CFO, CTO, and CPO as the services handled much of HomeAway's revenue",
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Lead development and enhancement of PCI Compliant \"payment island\". Architected and implemented payment gateway router which sends transactions from clients to any one of several payment gateways (e.g. Cybersource, Payflow Pro, Yapstone, and Trident)",
