--- a/cv-vitae/schneeman-brent-resume.Rmd
+++ b/cv-vitae/schneeman-brent-resume.Rmd
@@ -20,7 +20,7 @@ library(vitae)
 ```
 
 # Overview
-Data science executive building and deploying machine learning and algorithmic models in real-time customer facing applications. Seeking role influential in operationalizing machine learning in production services.
+Data science executive building and deploying machine learning and algorithmic models in real-time customer facing applications. Seeking IC or management role influential in operationalizing machine learning in production services.
 
 I have broad leadership experience across data scientists, software engineers, data analysts, and data engineers, having scaled-from-zero durable teams across disciplines and companies. My software engineering and leadership skills greatly facilitated my re-focus on data science and machine learning as writing code enabled rapid learning and hypothesis testing. I am adept at combining engineering and science to help companies unlock the value of their data as they pivot to modern algorithmic-based business models. I have overseen and architected data solutions to provide APIs and platforms which expose ML and AI to stakeholders.
 
@@ -73,8 +73,8 @@ my_experience <- tibble::tribble(
   "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Personally built, trained and deployed color-classification CNN-based model for retail fashion catalog. Leveraged aforementioned ML infrastructure. Model allows Alegion to by-pass Crowd for certain color classes, greatly increasing margin",
     "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", 
   "Architected and lead delivery of Active Learning workflow coupling machine learning with human annotators, which provides significant workflow efficiency, chiefly for image annotation tasks. System deployed on Kubernetes-based infrastructure hosted on Amazon Web Services (AWS)",
-  "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Identified new product opportunities and developed new SKUs for efficient sales penetration, based on real-world machine learning engineerig processes and rapid hypothesis testing",
-    "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Collaborate with VP Sales and CEO to provide high-touch contract negotiations with key customers. Provide superlative support for Sales infront of these customers",
+  "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Identified new product opportunities and developed new SKUs for efficient sales penetration, based on real-world machine learning engineering processes and rapid hypothesis testing",
+    "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Collaborate with VP Sales and CEO to provide high-touch contract negotiations with key customers. Provide superlative support for Sales in front of these customers",
   "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Manage machine learning engineering and architecture team responsible for creating human-in-the-loop machine learning capabilities into the core product",
   "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Assumed roles of engineering leader, scrummaster, product owner, and team member as appropriate; skilled at blending Machine Learning and Software Engineering process techniques to deliver ML-based solutions",
   "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Implemented and directed Alegion's intellectual property program by liaising between outside Counsel, internal inventors, and executive sponsors",
