--- a/cv-vitae/schneeman-brent-resume.Rmd
+++ b/cv-vitae/schneeman-brent-resume.Rmd
@@ -3,9 +3,9 @@ name: Brent Schneeman
 position: "Engineering and Data Science"
 address: "1903 Barton Parkway, Austin TX 78704"
 phone: 512.298.8880
-www: schneeworld.netlify.com
+#www: schneeworld.netlify.com
 email: "schneeman@gmail.com"
-twitter: schnee
+#twitter: schnee
 github: schnee
 linkedin: schneeman
 headcolor: 000000
@@ -24,7 +24,7 @@ Data science executive building and deploying machine learning and algorithmic m
 
 I have broad leadership experience across data scientists, software engineers, data analysts, and data engineers, having scaled-from-zero durable teams across disciplines and companies. My software engineering and leadership skills greatly facilitated my re-focus on data science and machine learning as writing code enabled rapid learning and hypothesis testing. I am adept at combining engineering and science to help companies unlock the value of their data as they pivot to modern algorithmic-based business models. I have overseen and architected data solutions to provide APIs and platforms which expose ML and AI to stakeholders.
 
-I am active in local meetups and conferences, presenting on a variety of Data Science and Machine Learning topics, as well as being and Advisory Board Member for UT-Austin.
+I am active in local meetups and conferences, presenting on a variety of Data Science and Machine Learning topics, as well as being and Advisory Board Member for UT-Austin, McCombs School of Business.
 
 # Expertise
 
@@ -34,8 +34,12 @@ my_expertise <- tibble::tribble(
   ~item, ~desc,
   "Languages", "Python, R, SQL, Java",
   "Big Data and Streaming", "Spark, Kafka, ElasticSearch",
-  "Datasets", "JSON, Schematic, CSV",
+  "Datasets", "JSON, Schematic, CSV, Schema Design, ",
   "DevOps", "Kubernetes, AWS, Kubeflow",
+  "Machine Learning", "Tensorflow, Keras, Pandas, Tidyverse",
+  "Supervised Learning", "Regression, Random Forest, Gradient Boosted Trees",
+  "Unsupervised Learning", "K-means and hierarchical clustering, PCA, tSNE",
+  "Deep Learning", "CNN, RNN, LSTM, Active Learning, Transfer Learning",
   "Version Control", "Git, DVC",
 )
  
@@ -48,8 +52,8 @@ my_expertise %>%
 my_expertise <- tibble::tribble(
   ~item, ~desc,
   "Project Management", "Agile, Scrum, Kanban",
-  "Collaboration", "Strategic thinking, Engineering management, C-Level advisor",
-  "Miscellaneous", "Operationalizing algorithms, product-oriented"
+  "Collaboration", "Strategic thinking, Engineering and Science leadership, C-Level advisor, Team design",
+  "Miscellaneous", "Operationalizing algorithms, product orientation"
 )
  
 my_expertise %>% 
@@ -93,11 +97,14 @@ my_experience <- tibble::tribble(
   
   # The HomeAway Experience
   
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Manage, Bootstrap, and Provide Strategic Vision for data science initiatives, such as Inventory Ranking and Optimization, Content Recommendations, Marketplace Health, Image Quality, Chatbot AI Services, and other business critical efforts",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Strengthened Algorithmic and Machine Learning muscle through project-based leadership. Partnering with disparate product lines to answer questions quicker, and find new questions faster. Evangelized data-informed decision making across company and with key executives, leading to the formation of the HomeAway Data Science Team. Built and directed 25 person team consisting of PhD Data Scientists and Machine Learning Engineers",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Team projects included competitive intelligence, fraud detection, bot detection, unstructured and semi-structured data mining, search result ranking, photo analysis, and price and occupancy predictions",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Individual contributor on ML modeling for consumer facing chatbot. Duties included labeling data, building LSTM-based intent classifier (in Keras), collaborating with data and software engineering to determine application architecture",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created experience-based recommendation service that found activities in one location that are similar to activities in another. A word2vec-based latent embedding space was used to find the similar activities",
     "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created photo-similarity service that allowed clients to explore images of properties that are similar to another properties photos. An 'image2vec' vector space was built from images and the service navigated that space",
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created Machine Learning pipeline in collaboration with infrastructure team within HomeAway to aid model production and deployment",
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created Data Science Internship Program for HomeAway University",
     "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Using R and later Spark, created models that compared geographic representation of HomeAway properties with the representation from a competitor. Initially, TF-IDF vectors were built from property descriptions and distances measured between those vectors determined duplicate or unique properties, but LDA distributions were used as the project matured. A similar transition from R to Spark occurred as the need for greater parallelization became apparent",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Bayesian and frequentist multi-variate test analysis in R",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Introduced natural language processing, machine learning, and defensible statistical inference",
@@ -105,6 +112,7 @@ my_experience <- tibble::tribble(
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created and lead 100+ volunteer \"science club\", all trying to swipe right for science",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Partnered with the UT McCombs School of Business, providing guidance and data for the Business Analytics program participant capstone projects. Acted as an external ambassador through public speaking at various events. Built internal credibility around a scientific method to AB Testing and algorithmic approached to business problems",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Collaborated with Data and Software Engineering organizations to prototype and select big-data solutions based on Hadoop (HDFS, Hive) and Spark",
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Leadership role in Introduction to Data Science courses, Mentorship Program, HADES",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Reported to CIO",  
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Directed 25-person team responsible for the Orders and Payments Platform services. The team consisted of Engineers and Architects of all levels and areas in \"the stack\" (UX/UI, web-tier, service layer, ...)",
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Worked closely with CFO, CTO, and CPO as the services handled much of HomeAway's revenue",
@@ -112,6 +120,7 @@ my_experience <- tibble::tribble(
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Established HomeAway Inventions Program, which is responsible for identifying, cataloging and protecting intellectual property. Sole- or Co-Inventor on several pre-patent inventions",
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Technical member of global payment processor negotiation team, responsible for technical evaluation and diligence for HomeAway's successful selection of a global payment processor",
   "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Team Lead delivering Unified Payments Services, PCI and SOX compliance, and migrating vertical payment flows to common service-based API",
+  "Director, Software Engineering", "Jun 2010", "Jul 2014", "HomeAway, an Expedia Company", "Two patents on data storage were filed and approved (see details in Patents section)",
   
   # The PayPal Experience
   
